tests/invalid/subscript_aug_assign_tuple/main.py
def main() -> None:
    t: tuple[int, int] = (1, 2)
    t[0] += 5
